<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Banana</string>
    <string name="app_author">by Little4</string>
    <string name="app_intro">Count your age by friends, not years. Count your life by smiles, not tears.</string>
    <string name="action_settings">Settings</string>
    <string name="action_me">Me</string>
    <string name="action_fav">Favourites</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">www.banana.com</string>
    <string name="content_authority">com.chijsh.banana.app</string>
    <string name="title_activity_login">Login</string>
    <string name="login_with_weibo">LOGIN WITH WEIBO</string>
    <string name="weibo_auth_cancel">Auth cancelled</string>
    <string name="weibo_auth_failed">Auth failed</string>
    <string name="weibo_auth_success">Auth success</string>
    <string name="weibo_source">From</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="notif_mention">Mention</string>
    <string name="notif_comment">Comment</string>
    <string name="profile_weibo">Weibo</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_followers">Followers</string>
    <string name="pref_signout">Sign out</string>
    <string name="pref_account">Account</string>
    <!-- Post Weibo Activity -->
    <string name="title_activity_post">New Weibo</string>
    <string name="title_add_picture">Add Picture</string>
    <string name="weibo_edit_hint">What\'s on your mind?</string>
    <string name="weibo_sent_success">Weibo sent successfully</string>
    <string name="added_to_favourite">Added to Favourites</string>
    <string name="added_favourite_failure">Add favourite failure</string>
    <string name="deleted_favourite">Favourite deleted</string>
    <string name="delete_favourite_failure">Delete favourite failure</string>
    <string name="no_recent">No recent</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_post_content">Weibo Content</string>
    <string name="just_now">Just now</string>

    <string name="no_more_followers">No more followers</string>
    <string name="no_more_follows">No more follows</string>

    <plurals name="numberOfMinsAvailable">
        <item quantity="one">%d min ago</item>
        <item quantity="other">%d mins ago</item>
    </plurals>
    <plurals name="numberOfHoursAvailable">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <string name="yesterday">Yesterday</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>

    <string name="navdrawer_home">Home</string>
    <string name="navdrawer_mention">Mention</string>
    <string name="navdrawer_comment">Comment</string>
    <string name="navdrawer_favourite">Favourite</string>
    <string name="navdrawer_setting">Settings</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

</resources>
