<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_me"
        android:title="@string/action_me"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_cached_white_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/fav"
        android:title="@string/action_fav"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stars_white_24dp"
        app:showAsAction="ifRoom" />

</menu>
